<resources>
    <string name="app_name">TrekIt</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="all_peaks">All Peaks</string>
    <string name="favourite_peaks">Favourite Peaks</string>
    <string name="climbed_peaks">Climbed Peaks</string>
    <string name="about_us">About Us</string>
    <string name="mountain_name">Mountain Name</string>
    <string name="elevation">Elevation</string>
    <string name="area_name">Area Name</string>
    <string name="mountainListLabel">List of Mountains</string>
    <string name="welcome_to_trek_it">Welcome to Trek It</string>
    <string name="peaksBlurb">Visit our list of peaks to find out information about the highest 100 peaks in Ireland. Select a peak to view it\'s details.View the mountain\'s location on the map to navigate to the peak and get started on your climb!</string>
    <string name="use_map_blurb">View the mountain\'s location on the map to navigate to the peak and get started on your climb!</string>
    <string name="info_blurb">Select a peak to view it\'s details.</string>
    <string name="content_desc_welcome_image">Image of mountains, a valley and cloudy sky</string>
    <string name="_100_peaks">100 Peaks</string>
    <string name="title_activity_map">Map of Peak Location</string>
    <string name="peak_information">Peak Information</string>
    <string name="button_location">View Location</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="meters">m</string>
    <string name="menu_cancelList">Cancel</string>
    <string name="menu_filterList">Filter List</string>
    <string name="menu_addToFavourites">Add To Favourites</string>
    <string name="longitude_label">Longitude:</string>
    <string name="latitude_label">Latitude:</string>
    <string name="menu_listMountains">View All Mountains on Map</string>
    <string name="title_activity_mountain_maps">Map of All Mountains</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">Signup/Login to TrekIt</string>
    <string name="logout">Logout</string>
    <string name="signed_out">Signed Out</string>
    <string name="logo">Image of the logo</string>
    <string name="emailpassword_title_text">Insert email and password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="menu_favouriteList">Favourite List</string>
    <string name="favouriteListLabel">List of Favourites</string>
    <string name="Profile">Profile</string>
    <string name="menu_addToClimbed">Add To Climbed</string>
    <string name="hint_mountainName">Mountain Name</string>
    <string name="date_of_climb">Date of Climb:</string>
    <string name="time_taken">Time Taken (hh:mm):</string>
    <string name="save">Save</string>
    <string name="duration">Duration</string>
    <string name="menu_home">Home</string>
    <string name="features">Statistics will be available here SOON!</string>
    <string name="_0">0</string>
    <string name="mins">mins</string>
    <string name="mountainsClimbed">Mountains Climbed:</string>
    <string name="menu_stats">Climbed Statistics</string>
</resources>