<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.wit.trekit.activities.AddClimbedDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="394dp"
        android:layout_height="616dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout3">

        <TextView
            android:id="@+id/mountainName"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="84dp"
            android:layout_marginBottom="552dp"
            android:hint="@string/hint_mountainName"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13999999"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/date_of_climb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            android:textColor="@color/gray_700"
            android:text="@string/date_of_climb"
            app:layout_constraintStart_toStartOf="@+id/mountainName"
            app:layout_constraintTop_toBottomOf="@+id/mountainName" />

        <Button
            android:id="@+id/date_of_climb_input"
            style="?android:spinnerStyle"
            android:layout_width="161dp"
            android:layout_height="40dp"
            android:onClick="openDatePicker"
            android:text="JAN 01 2020"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/date_of_climb"
            app:layout_constraintTop_toTopOf="@+id/date_of_climb" />

        <TextView
            android:id="@+id/time_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/time_taken"
            android:textColor="@color/gray_700"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/date_of_climb"
            app:layout_constraintTop_toBottomOf="@+id/date_of_climb" />

        <NumberPicker
            android:id="@+id/hours_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/date_of_climb_input"
            app:layout_constraintTop_toBottomOf="@+id/date_of_climb_input" />

        <NumberPicker
            android:id="@+id/minutes_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@+id/hours_taken"
            app:layout_constraintTop_toTopOf="@+id/hours_taken" />

        <Button
            android:id="@+id/button_save_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.549"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_taken" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>