<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:fitsSystemWindows="true"
        app:elevation="0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="338dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/mountains1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="353dp"
            android:layout_height="69dp"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="26dp"
            android:shadowColor="#000"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="3"
            android:text="@string/welcome_to_trek_it"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />

    </FrameLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="363dp"
        android:layout_height="146dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="20dp"
        android:text="@string/peaksBlurb"
        android:textColor="@color/gray_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="359dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/features"
        android:textColor="@color/gray_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <Button
        android:id="@+id/allBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="All Peaks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/faveBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:onClick="onButtonClick"/>

    <Button
        android:id="@+id/faveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:text="Favourite"
        app:layout_constraintEnd_toStartOf="@+id/climbBtn"
        app:layout_constraintStart_toEndOf="@id/allBtn"
        app:layout_constraintTop_toTopOf="@+id/allBtn"
        android:onClick="onButtonClick"/>

    <Button
        android:id="@+id/climbBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:text="Climbed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/faveBtn"
        app:layout_constraintTop_toTopOf="@+id/faveBtn"
        android:onClick="onButtonClick"/>


</androidx.constraintlayout.widget.ConstraintLayout>